--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,7 @@
 AC_INIT([project], [0.1], [ivar.jarlsby@gmail.com])
+AC_CONFIG_AUX_DIR([config])
+AC_CONFIG_MACRO_DIR([m4])
+
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 
 AC_PROG_CC
